--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite --port 4000",
+        "server": "nodemon ./api/index.js",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
@@ -14,6 +15,7 @@
         "@types/socket.io": "^3.0.2",
         "@types/socket.io-client": "^3.0.0",
         "express": "^4.18.2",
+        "nodemon": "^3.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "socket.io": "^4.7.2",
