--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
         "@types/express": "^4.17.17",
         "@types/socket.io": "^3.0.2",
         "@types/socket.io-client": "^3.0.0",
